deploy/scaleway-k8s/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-svc
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: web
---
apiVersion: v1
kind: Service
metadata:
  name: api-svc
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deploy
spec:
  replicas: 4
  selector:
    matchLabels:
      app: web
  revisionHistoryLimit: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: web
    spec:
      volumes:
        - name: nginx
          configMap:
            name: web-nginx-cm
        - name: conf-d
          configMap:
            name: web-conf.d-cm
      containers:
        - name: web
          image: rg.fr-par.scw.cloud/image-data-hiding/web:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: nginx
              mountPath: /etc/nginx
            - name: conf-d
              mountPath: /etc/nginx/conf.d
          resources:
            limits:
              cpu: '250m'
              memory: '256Mi'
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  revisionHistoryLimit: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: rg.fr-par.scw.cloud/image-data-hiding/api:latest
          imagePullPolicy: Always
          resources:
            limits:
              cpu: '800m'
              memory: '1024Mi'
          ports:
            - containerPort: 80
